frontend/app/home.module.scss
.home {
  max-width: 1600px;
  margin: 0 auto;

  p {
    margin-top: 0;
  }

  &__hero {
    margin: 6.5rem 0 0 0;
  }

  &__title {
    width: 100%;
    max-width: 33vw;
    padding: 0 2rem;
    @media screen and (max-width: 900px) {
      max-width: 100%;
      padding: 0 1rem;
    }

    svg {
      @media screen and (max-width: 900px) {
        display: block;
        margin: 0 auto;
      }
    }
  }

  &__columns {
    column-count: 3;
    gap: 4rem;
    padding: 3rem 2rem 12rem 2rem;

    @media screen and (max-width: 900px) {
      column-count: 1;
      padding: 2rem 1rem 5rem 1rem;
    }
  }

  &__section {
    break-inside: avoid;
    margin-top: 3rem;

    &:first-child {
      margin-top: 0;
    }
  }

  &__systems-list {
    list-style: none;
    padding-left: 0;
    margin: 0 0 1.5rem 0;
    gap: 2rem;

    li {
      margin: 0 0 0.25rem 0;
    }
  }

  &__latest-list {
    list-style: none;
    padding-left: 0;
    margin: 0;

    li {
      margin: 0.5rem 0 1rem 0;
    }

    .article-header {
      grid-template-columns: 2rem 1fr;
    }

    .article-title {
      font-size: 0.875rem;

      p {
        font-weight: 400;
      }
    }
  }

  &__article-subtitle {
    margin-left: 2.25rem;
    font-size: 0.8125rem;
  }

  &__anatomy-link {
    border: 1px solid #eee;
    border-left: none;
    display: block;
    background-size: 1vw 1vw;
    margin: 1rem 0;

    &:hover {
      opacity: 0.85;
    }

    @media screen and (max-width: 900px) {
      background-size: 0.75rem 0.75rem;
    }
  }

  &__people-list {
    list-style: none;
    padding-left: 0;
    margin: 0 0 1.5rem 0;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 0 0.5rem;

    li {
      margin: 0;
    }

    p {
      font-size: 0.8125rem;
    }
  }
}

.anatomy-crossfade {
  position: relative;
  aspect-ratio: 4 / 3;
  width: 100%;
  overflow: hidden;
  padding: 0 2rem;

  img {
    position: absolute;
    inset: 0;
    object-fit: cover;
    opacity: 0;
    animation: anatomy-crossfade 28s linear infinite;
    animation-fill-mode: backwards;
    max-width: 85%;
    margin: 0 auto;

    &:nth-child(1) {
      animation-delay: -1s;
    }
    &:nth-child(2) {
      animation-delay: 3s;
    }
    &:nth-child(3) {
      animation-delay: 7s;
    }
    &:nth-child(4) {
      animation-delay: 11s;
    }
    &:nth-child(5) {
      animation-delay: 15s;
    }
    &:nth-child(6) {
      animation-delay: 19s;
    }
    &:nth-child(7) {
      animation-delay: 23s;
    }
  }
}

@keyframes anatomy-crossfade {
  0% {
    opacity: 0;
  }
  3.57% {
    opacity: 1;
  }
  14.29% {
    opacity: 1;
  }
  17.86% {
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

